cholera 0.2.9.9010
----------------------------------------------------------------

* amend ortho.proj:
  reclassify cases 369, 434, 11, 53, 193 from segment "194-1" to "148-1".


cholera 0.2.9.9009
----------------------------------------------------------------

* implement area = TRUE in print.walking() for case.set = "snow".


cholera 0.2.9.9008
----------------------------------------------------------------

* add case.set argument to neighborhoodWalking().


cholera 0.2.9.9007
----------------------------------------------------------------

* highlight cases in segmentLocator(), streetNameLocator() and
  streetNumberLocator().


cholera 0.2.9.9006
----------------------------------------------------------------

* use code from neighborhoodPaths() for neighborhoodWalking().


cholera 0.2.9.9005
----------------------------------------------------------------

* add expected area plot to neighborhoodPaths().


cholera 0.2.9.9004
----------------------------------------------------------------

* implement parallelization of neighborhoodPaths().


cholera 0.2.9.9003
----------------------------------------------------------------

* add expected paths (observed = FALSE) to neighborhoodPaths().


cholera 0.2.9.9002
----------------------------------------------------------------

* update yard distance factor in addWhitehead().
* fix pump labels in caseLocator().
* add unitMeter().


cholera 0.2.9.9001
----------------------------------------------------------------

* add segmentLength().
* add segmentLength() to segmentLocator().


cholera 0.2.9.9000
----------------------------------------------------------------

* add neighborhoodPaths() w/ S3 plot and print methods.


cholera 0.2.1.9014
----------------------------------------------------------------

* add nearestPump() and nearestPath().


cholera 0.2.1.9013
----------------------------------------------------------------

* update neighborhoodDistances().
* add print method to timeSeries().